desktop navigation and tweeks pups-expected and about-us to css-grid

--- a/sass/03-regions/_regions-dir.scss
+++ b/sass/03-regions/_regions-dir.scss
@@ -3,6 +3,7 @@
 // ////////////////////////
 
 @import "header_front-page";
+@import "navigation";
 @import "aboutus";
 @import "pups-expected";
 @import "our-pets";
