--- a/templates/index.html
+++ b/templates/index.html
@@ -13,67 +13,104 @@
 <body>
 
     <header class="header">
-        <div class="header__top">
 
-            <div class="site__name heading">
-                De Bullensteeg
-            </div>
+        <div class="container">
 
-            <div class="header__menu">
-                <div class="navigation">
-                    <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
+            <div class="header__top">
 
-                    <label for="navi-toggle" class="navigation__button">
-                        <span class="navigation__icon">&nbsp;</span>
-                    </label>
-
-                    <div class="navigation__background"></div>
-
-                    <nav class="navigation__nav">
-                        <div class="navigation__items">
-                            <ul class="navigation__list">
-                                <li class="navigation__item">
-                                    <a href="#" class="navigation__link">Home</a>
-                                </li>
-                                <li class="navigation__item">
-                                    <a href="#" class="navigation__link">Teven</a>
-                                </li>
-                                <li class="navigation__item">
-                                    <a href="#" class="navigation__link">Reuen</a>
-                                </li>
-                                <li class="navigation__item">
-                                    <a href="#" class="navigation__link">Pups</a>
-                                </li>
-                                <li class="navigation__item">
-                                    <a href="#" class="navigation__link">Foto's</a>
-                                </li>
-                                <li class="navigation__item">
-                                    <a href="#" class="navigation__link">Nieuws</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="navigation__site-name">
-                            Bullensteeg
-                        </div>
-                    </nav>
-
+                <div class="site__name heading">
+                    De Bullensteeg
                 </div>
-                <!-- end navigation -->
+
+                <div class="header__menu">
+                    <div class="navigation">
+                        <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
+
+                        <label for="navi-toggle" class="navigation__button">
+                            <span class="navigation__icon">&nbsp;</span>
+                        </label>
+
+                        <div class="navigation__background"></div>
+
+                        <!-- In Drupal main-menu     -->
+                        <nav class="navigation__nav">
+                            <div class="navigation__items">
+                                <ul class="navigation__list">
+                                    <li class="navigation__item">
+                                        <a href="#" class="navigation__link">Home</a>
+                                    </li>
+                                    <li class="navigation__item">
+                                        <a href="#" class="navigation__link">Teven</a>
+                                    </li>
+                                    <li class="navigation__item">
+                                        <a href="#" class="navigation__link">Reuen</a>
+                                    </li>
+                                    <li class="navigation__item">
+                                        <a href="#" class="navigation__link">Pups</a>
+                                    </li>
+                                    <li class="navigation__item">
+                                        <a href="#" class="navigation__link">Foto's</a>
+                                    </li>
+                                    <li class="navigation__item">
+                                        <a href="#" class="navigation__link">Nieuws</a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="navigation__site-name">
+                                Bullensteeg
+                            </div>
+                        </nav>
+
+                        <!-- in Drupal footer-menu -->
+                        <nav class="navigation__nav--desktop">
+                            <div class="navigation__items--desktop">
+                                <ul class="navigation__list">
+                                    <li class="navigation__item--desktop">
+                                        <a href="#" class="navigation__link--desktop">Home</a>
+                                    </li>
+                                    <li class="navigation__item--desktop">
+                                        <a href="#" class="navigation__link--desktop">Teven</a>
+                                    </li>
+                                    <li class="navigation__item--desktop">
+                                        <a href="#" class="navigation__link--desktop">Reuen</a>
+                                    </li>
+                                    <li class="navigation__item--desktop">
+                                        <a href="#" class="navigation__link--desktop">Pups</a>
+                                    </li>
+                                    <li class="navigation__item--desktop">
+                                        <a href="#" class="navigation__link--desktop">Foto's</a>
+                                    </li>
+                                    <li class="navigation__item--desktop">
+                                        <a href="#" class="navigation__link--desktop">Nieuws</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </nav>
+
+                    </div>
+                    <!-- end navigation -->
+                </div>
+
+
             </div>
+
+
 
         </div>
 
         <div class="container">
-        
+
             <div class="header__main">
 
                 <div class="header__img">
                     <img src="../images/for_html/front-img.jpg" alt="front image">
                 </div>
-        
+
                 <div class="header__slogan">
                     <h1 class="heading heading-first">
-                        Franse bulldoggen, <br> grote liefde, <br> passie en hobby.
+                        Franse bulldoggen,
+                        <br> grote liefde,
+                        <br> passie en hobby.
                     </h1>
                 </div>
 
@@ -90,7 +127,7 @@
                         “Mijn honden gezondheid en karakter als prioriteit”
                     </p>
                 </div>
-                
+
                 <div class="contact-details contact-details--green contact-details--full-width">
                     Marleen Halleng
                     <br> marleenhalleng@gmail.com
@@ -98,7 +135,7 @@
                 </div>
             </div>
             <!-- end header__main -->
-        
+
         </div>
         <!-- end container -->
 
@@ -109,21 +146,19 @@
             <img src="../images/for_html/about-us.JPG" alt="about us image">
         </div>
 
-        <div class="container">
-            <div class="aboutus__text">
-                <h2 class="heading heading-second">
-                    Franse Bulldoggen, mijn leven.
-                </h2>
-                <p>
-                    Mijn naam is Halleng Marleen en de Franse Bulldog is in mijn leven gekomen in 2007 tijdens een periode dat ik ziek geworden
-                    ben. Ik had gezelschap nodig en daar is dit ras zeer geschikt voor.
-                </p>
-                <p>
-                    Ondertussen zijn we vele jaren later en zijn er een aantal bulldogjes bij ons gezin komen wonen.
-                </p>
-                <div class="read-more">
-                    <a class="read-more__link" href="#">Lees meer</a>
-                </div>
+        <div class="aboutus__text">
+            <h2 class="heading heading-second">
+                Franse Bulldoggen, mijn leven.
+            </h2>
+            <p>
+                Mijn naam is Halleng Marleen en de Franse Bulldog is in mijn leven gekomen in 2007 tijdens een periode dat ik ziek geworden
+                ben. Ik had gezelschap nodig en daar is dit ras zeer geschikt voor.
+            </p>
+            <p>
+                Ondertussen zijn we vele jaren later en zijn er een aantal bulldogjes bij ons gezin komen wonen.
+            </p>
+            <div class="read-more">
+                <a class="read-more__link" href="#">Lees meer</a>
             </div>
         </div>
 
@@ -132,6 +167,8 @@
     </section>
 
     <div class="container">
+
+
         <section class="pups-expected panel panel--taller">
 
             <div class="pups-expected__img">
