--- a/sass/03-regions/_aboutus.scss
+++ b/sass/03-regions/_aboutus.scss
@@ -5,11 +5,20 @@
 .aboutus {
   margin-bottom: 9rem;
 
+  display: grid;
+  grid-template-columns: 1fr;
+
   &__img {
     margin-bottom: 6rem;
   }
 
-  &__text {  
+  &__text {
+    width: 80vw;
+    margin: 0 auto;
 
+  }
+
+  &__bcg {
+    display: none;
   }
 }
