--- a/sass/01-base/_typography.scss
+++ b/sass/01-base/_typography.scss
@@ -3,14 +3,14 @@
 // ////////////////////////
 
 body {
-  font-family: 'Archivo', sans-serif;
+  font-family: "Archivo", sans-serif;
   font-size: 1.8rem;
   color: $black_gunmetal;
   line-height: 2.5rem;
 }
 
 .heading {
-  font-family: 'Archivo Black', sans-serif;
+  font-family: "Archivo Black", sans-serif;
 }
 
 .heading-first {
@@ -23,21 +23,28 @@ body {
   }
 
   @include respond(big-desktop) {
-    @include responsive-font(3.5vw, 5rem, 7rem);
+    line-height: 12rem;
+    @include responsive-font(5vw, 5rem, 12rem);
   }
-
 }
 
 .heading-second {
   font-size: 2.8rem;
   margin-bottom: 4rem;
+
+  &--taller {
+    @include respond(desktop) {
+      line-height: 4rem;
+      @include responsive-font(2.8vw, 4rem, 5rem);
+    }
+  }
 }
 
 .site__name {
   text-transform: uppercase;
 
   &--small {
-    font-size: calc(#{$base-font-size} - .2rem);
+    font-size: calc(#{$base-font-size} - 0.2rem);
     &::after {
       content: " --";
     }
