--- a/sass/03-regions/_aboutus.scss
+++ b/sass/03-regions/_aboutus.scss
@@ -4,21 +4,49 @@
 
 .aboutus {
   margin-bottom: 9rem;
+  z-index: 1;
 
   display: grid;
   grid-template-columns: 1fr;
 
+  @include respond(tablet) {
+    margin-top: -10rem;
+    grid-template-columns: minmax(10vw, 15vw) minmax(10vw, 15vw) 4rem minmax(25vw, 50vw) minmax(1vw, auto);
+    grid-template-rows: 10rem auto minmax(5vh, 6vh);
+  }
+
   &__img {
     margin-bottom: 6rem;
+
+    @include respond(tablet) {
+      grid-column: 1 / 3;
+      grid-row: 2 / 3;
+      z-index: 3;
+    }
   }
 
   &__text {
     width: 80vw;
     margin: 0 auto;
+    z-index: 3;
+
+    @include respond(tablet) {
+      width: auto;
+      grid-column: 4 / 5;
+      grid-row: 2 / 3;
+      align-self: center;
+    }
 
   }
 
   &__bcg {
     display: none;
+    background: $white;
+
+    @include respond(tablet) {
+      display: block;
+      grid-column: 2 / -1;
+      grid-row: 1 / -1;
+    }
   }
 }
