--- a/templates/index.html
+++ b/templates/index.html
@@ -147,7 +147,7 @@
         </div>
 
         <div class="aboutus__text">
-            <h2 class="heading heading-second">
+            <h2 class="heading heading-second heading-second--taller">
                 Franse Bulldoggen, mijn leven.
             </h2>
             <p>
