--- a/templates/index.html
+++ b/templates/index.html
@@ -169,28 +169,38 @@
     <div class="container">
 
 
-        <section class="pups-expected panel panel--taller">
+        <section class="pups-expected panel-wide">
 
-            <div class="pups-expected__img">
-                <img src="../images/for_html/pups.jpg" alt="Pups">
-            </div>
+                <div class="panel-wide__img">
+                    <img src="../images/for_html/pups.jpg" alt="Pups">
+                </div>
 
-            <div class="pups-expected__wrapper">
-                <div class="pups-expected__title">
-                    <div class="heading">
-                        Pups verwacht
+                <div class="panel-wide__wrapper">
+
+                    <div class="pups-expected__title">
+                        <div class="heading">
+                            Pups verwacht
+                        </div>
                     </div>
+
+                    <div class="pups-expected__teaser-content">
+                            Pups van Mystic De Bullensteeg & Ben De Loncourville.
+                            (Begin Juli 2018)
+                    </div>
+
+                    <div class="read-more u-flex-align-right">
+                        <a href="#" class="read-more__link">Lees meer</a>
+                    </div>
+
                 </div>
-                <div class="read-more u-flex-align-right">
-                    <a href="#" class="read-more__link">Lees meer</a>
-                </div>
-            </div>
+
+                <div class="panel-wide__bcg"></div>
 
         </section>
 
         <section class="our-pets u-negative-margin-top">
 
-            <div class="our-pets__teven panel panel--small">
+            <div class="our-pets__teven panel">
 
                 <div class="teven__img">
                     <img src="../images/for_html/teef1.JPG" alt="">
@@ -205,7 +215,7 @@
 
             </div>
 
-            <div class="our-pets__reuen panel panel--small">
+            <div class="our-pets__reuen panel">
                 <div class="reuen__img">
                     <img src="../images/for_html/reu.JPG" alt="">
                 </div>
@@ -221,13 +231,13 @@
 
         </section>
 
-        <section class="news">
-            <div class="panel panel--taller">
-                <div class="news__img">
+        <section class="news panel-wide">
+
+                <div class="panel-wide__img">
                     <img src="../images/for_html/mystic.jpg" alt="news">
                 </div>
 
-                <div class="panel__inner">
+                <div class="panel-wide__wrapper">
                     <h2 class="heading heading-second">
                         In memoriam
                     </h2>
@@ -235,7 +245,9 @@
                         <a href="#" class="read-more__link">Lees meer</a>
                     </div>
                 </div>
-            </div>
+
+                <div class="panel-wide__bcg"></div>
+
         </section>
 
     </div>
