--- a/sass/04-components/_panels.scss
+++ b/sass/04-components/_panels.scss
@@ -4,9 +4,11 @@
 
 .panel {
   margin: 0 auto;
+  width: 30rem;
   background: $white;
   box-shadow: 0 4px 8px 0 rgba($black-gunmetal, 0.1), 0 6px 20px 0 rgba($black-gunmetal, 0.1);
   z-index: 1;
+
 
   &__inner {
     padding: 2rem;
@@ -15,14 +17,71 @@
     flex-direction: column;
     
   }
-  &--small {
-    width: 30rem;
-  }
 
-  &--taller {
-    width: 80vw;
-    max-width: 39rem;
-  }
 }
 
+.panel-wide {
+  margin: 8rem auto;
+  max-width: 38rem;
 
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto 30rem;
+
+  @include respond(desktop) {
+    max-width: 80rem;
+    min-width: 50vw;
+
+    grid-template-columns: 8rem 30rem 45rem;
+    grid-template-rows: 8rem 30rem auto;
+  }
+
+  &__img {
+    overflow: hidden;
+    grid-column: 1 / -1;
+    grid-row: 1 / 2;
+    order: 1;
+
+    @include respond(desktop) {
+      grid-column: 1 / 3;
+      grid-row: 1 / 3;
+    }
+
+    img {
+      width: 100%;
+      height: auto;
+    }
+  }
+
+  &__wrapper {
+    grid-column: 1 / -1;
+    grid-row: 2 / 3;
+    order: 2;
+
+    padding: 0 3rem 6rem;
+
+
+    @include respond(desktop) {
+      grid-column: 3 / -1;
+      grid-row: 2 / -1;
+
+      padding: 2remdesktop 3rem 8rem;
+    }
+    
+    display: flex;
+    flex-direction: column;
+
+  }
+
+  &__bcg {
+    grid-column: 1 / -1;
+    grid-row: 1 / 3;
+
+    @include respond(desktop) {
+      grid-column: 2 / -1;
+      grid-row: 2 / -1;
+    }
+
+    background: $white;
+  }
+}
