shadow to variables and added to panel-wide

--- a/sass/00-abstracts/_variables.scss
+++ b/sass/00-abstracts/_variables.scss
@@ -11,6 +11,10 @@ $white: #FFFFFF;
 $black_gunmetal: #2C363F;
 $gray-spanish: #969A97;
 
+// FONTS
 $base-font-size: 1.8rem;
 $heading-first: 6rem;
 $heading-second: 3.2rem;
+
+//
+$panel-shadow: 0 4px 8px 0 rgba($black-gunmetal, 0.1), 0 6px 20px 0 rgba($black-gunmetal, 0.1);
