--- a/sass/04-components/_panels.scss
+++ b/sass/04-components/_panels.scss
@@ -6,9 +6,8 @@
   margin: 0 auto;
   width: 30rem;
   background: $white;
-  box-shadow: 0 4px 8px 0 rgba($black-gunmetal, 0.1), 0 6px 20px 0 rgba($black-gunmetal, 0.1);
+  box-shadow: $panel-shadow;
   z-index: 1;
-
 
   &__inner {
     padding: 2rem;
@@ -65,7 +64,8 @@
       grid-column: 3 / -1;
       grid-row: 2 / -1;
 
-      padding: 2remdesktop 3rem 8rem;
+      padding: 2rem 3rem 8rem;
+      align-self: center;
     }
     
     display: flex;
@@ -74,6 +74,7 @@
   }
 
   &__bcg {
+    box-shadow: $panel-shadow;
     grid-column: 1 / -1;
     grid-row: 1 / 3;
 
