--- a/templates/index.html
+++ b/templates/index.html
@@ -168,7 +168,6 @@
 
     <div class="container">
 
-
         <section class="pups-expected panel-wide">
 
                 <div class="panel-wide__img">
@@ -184,8 +183,7 @@
                     </div>
 
                     <div class="pups-expected__teaser-content">
-                            Pups van Mystic De Bullensteeg & Ben De Loncourville.
-                            (Begin Juli 2018)
+                        De Bullensteeg Pepper en Bandit From Fortunebulls
                     </div>
 
                     <div class="read-more u-flex-align-right">
@@ -238,9 +236,17 @@
                 </div>
 
                 <div class="panel-wide__wrapper">
-                    <h2 class="heading heading-second">
+                    <h2 class="heading heading-second u-margin-top">
                         In memoriam
                     </h2>
+                    <div class="panel-wide__content">
+                            <p>
+                                Jij mooie meid met je ogen die altijd heel  attent me overal  volgde.
+                            </p>
+                            <p>
+                                Je hebt me doen verschieten om plots van ons heen te gaan.
+                            </p>                                                        
+                    </div>
                     <div class="read-more u-flex-align-right">
                         <a href="#" class="read-more__link">Lees meer</a>
                     </div>
