footer to css-grid

--- a/templates/index.html
+++ b/templates/index.html
@@ -170,29 +170,29 @@
 
         <section class="pups-expected panel-wide">
 
-                <div class="panel-wide__img">
-                    <img src="../images/for_html/pups.jpg" alt="Pups">
+            <div class="panel-wide__img">
+                <img src="../images/for_html/pups.jpg" alt="Pups">
+            </div>
+
+            <div class="panel-wide__wrapper">
+
+                <div class="pups-expected__title">
+                    <div class="heading">
+                        Pups verwacht
+                    </div>
                 </div>
 
-                <div class="panel-wide__wrapper">
-
-                    <div class="pups-expected__title">
-                        <div class="heading">
-                            Pups verwacht
-                        </div>
-                    </div>
-
-                    <div class="pups-expected__teaser-content">
-                        De Bullensteeg Pepper en Bandit From Fortunebulls
-                    </div>
-
-                    <div class="read-more u-flex-align-right">
-                        <a href="#" class="read-more__link">Lees meer</a>
-                    </div>
-
+                <div class="pups-expected__teaser-content">
+                    De Bullensteeg Pepper en Bandit From Fortunebulls
                 </div>
 
-                <div class="panel-wide__bcg"></div>
+                <div class="read-more u-flex-align-right">
+                    <a href="#" class="read-more__link">Lees meer</a>
+                </div>
+
+            </div>
+
+            <div class="panel-wide__bcg"></div>
 
         </section>
 
@@ -231,28 +231,28 @@
 
         <section class="news panel-wide">
 
-                <div class="panel-wide__img">
-                    <img src="../images/for_html/mystic.jpg" alt="news">
-                </div>
+            <div class="panel-wide__img">
+                <img src="../images/for_html/mystic.jpg" alt="news">
+            </div>
 
-                <div class="panel-wide__wrapper">
-                    <h2 class="heading heading-second u-margin-top">
-                        In memoriam
-                    </h2>
-                    <div class="panel-wide__content">
-                            <p>
-                                Jij mooie meid met je ogen die altijd heel  attent me overal  volgde.
-                            </p>
-                            <p>
-                                Je hebt me doen verschieten om plots van ons heen te gaan.
-                            </p>                                                        
-                    </div>
-                    <div class="read-more u-flex-align-right">
-                        <a href="#" class="read-more__link">Lees meer</a>
-                    </div>
+            <div class="panel-wide__wrapper">
+                <h2 class="heading heading-second u-margin-top">
+                    In memoriam
+                </h2>
+                <div class="panel-wide__content">
+                    <p>
+                        Jij mooie meid met je ogen die altijd heel attent me overal volgde.
+                    </p>
+                    <p>
+                        Je hebt me doen verschieten om plots van ons heen te gaan.
+                    </p>
                 </div>
+                <div class="read-more u-flex-align-right">
+                    <a href="#" class="read-more__link">Lees meer</a>
+                </div>
+            </div>
 
-                <div class="panel-wide__bcg"></div>
+            <div class="panel-wide__bcg"></div>
 
         </section>
 
@@ -260,17 +260,21 @@
 
     <footer class="footer-wrapper">
         <div class="container">
+
             <div class="sub-footer">
+
                 <div class="sub-footer__btn-contact">
                     <a href="#" class="btn btn--green u-align-center u-full-width">Contacteer mij</a>
                 </div>
 
-                <div class="contact-details">
+                <div class="sub-footer__contact-details">
                     Marleen Halleng
                     <br> marleenhalleng@gmail.com
                     <br> Tel: (+32) 497 239 743
                 </div>
+
             </div>
+            <!-- end sub-footer -->
 
             <div class="footer">
                 Copyright © 2018 | BULLENSTEEG - Privacy Policy
