--- a/sass/03-regions/_footer.scss
+++ b/sass/03-regions/_footer.scss
@@ -5,13 +5,42 @@
 .footer-wrapper {
   background: $black_gunmetal;
   color: $white;
-  min-height: 30rem;
+  // min-height: 3rem;
   padding: 3rem 0 1rem;
 }
 
 .sub-footer {
+  padding: 3rem 0;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-areas: 
+    "btncontact"
+    "contactdetails";
+
+  @include respond(tablet) {
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: 
+      "btncontact contactdetails";
+    grid-gap: 5rem;
+  }
+
   &__btn-contact {
-    margin: 3rem 0;
+    grid-area: btncontact;
+    margin-bottom: 3rem;
+
+    @include respond(tablet) {
+      margin-bottom: 0;
+      align-self: center;
+    }
+    @include respond(desktop) {
+      max-width: 50rem;
+    }
+  }
+
+  &__contact-details {
+    grid-area: contactdetails;
+
+    line-height: 3rem;
   }
 }
 
