--- a/sass/00-abstracts/_variables.scss
+++ b/sass/00-abstracts/_variables.scss
@@ -12,6 +12,7 @@ $black_gunmetal: #2C363F;
 $gray-spanish: #969A97;
 
 // FONTS
+$font-family: "Montserrat", sans-serif;
 $base-font-size: 1.8rem;
 $heading-first: 6rem;
 $heading-second: 3.2rem;
