--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
                                         <a href="#" class="navigation__link">Reuen</a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="#" class="navigation__link">Pups</a>
+                                        <a href="page_pups.html" class="navigation__link">Pups</a>
                                     </li>
                                     <li class="navigation__item">
                                         <a href="#" class="navigation__link">Foto's</a>
@@ -75,7 +75,7 @@
                                         <a href="#" class="navigation__link--desktop">Reuen</a>
                                     </li>
                                     <li class="navigation__item--desktop">
-                                        <a href="#" class="navigation__link--desktop">Pups</a>
+                                        <a href="page_pups.html" class="navigation__link--desktop">Pups</a>
                                     </li>
                                     <li class="navigation__item--desktop">
                                         <a href="#" class="navigation__link--desktop">Foto's</a>
@@ -187,7 +187,7 @@
                 </div>
 
                 <div class="read-more u-flex-align-right">
-                    <a href="#" class="read-more__link">Lees meer</a>
+                    <a href="page_pups.html" class="read-more__link">Lees meer</a>
                 </div>
 
             </div>
