our pups mobile and desktop

--- a/templates/page_pups.html
+++ b/templates/page_pups.html
@@ -1,200 +1,203 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,900" rel="stylesheet">
-        <link rel="stylesheet" href="../dist/css/styles.css">
-        <title>De Bullensteeg</title>
-    </head>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,900" rel="stylesheet">
+  <link rel="stylesheet" href="../dist/css/styles.css">
+  <title>De Bullensteeg</title>
+</head>
 
-    <body>
+<body>
 
-        <header class="header header--page">
+  <header class="header header--page">
 
-            <div class="container">
+    <div class="container">
 
-                <div class="header__top">
+      <div class="header__top">
 
-                    <div class="site__name heading">
-                        De Bullensteeg
-                    </div>
-
-                    <div class="header__menu">
-                        <div class="navigation">
-                            <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
-
-                            <label for="navi-toggle" class="navigation__button">
-                                <span class="navigation__icon">&nbsp;</span>
-                            </label>
-
-                            <div class="navigation__background"></div>
-
-                            <!-- In Drupal main-menu -->
-                            <nav class="navigation__nav">
-                                <div class="navigation__items">
-                                    <ul class="navigation__list">
-                                        <li class="navigation__item">
-                                            <a href="index.html" class="navigation__link">Home</a>
-                                        </li>
-                                        <li class="navigation__item">
-                                            <a href="#" class="navigation__link">Teven</a>
-                                        </li>
-                                        <li class="navigation__item">
-                                            <a href="#" class="navigation__link">Reuen</a>
-                                        </li>
-                                        <li class="navigation__item">
-                                            <a href="#" class="navigation__link">Pups</a>
-                                        </li>
-                                        <li class="navigation__item">
-                                            <a href="#" class="navigation__link">Foto's</a>
-                                        </li>
-                                        <li class="navigation__item">
-                                            <a href="#" class="navigation__link">Nieuws</a>
-                                        </li>
-                                    </ul>
-                                </div>
-                                <div class="navigation__site-name">
-                                    Bullensteeg
-                                </div>
-                            </nav>
-
-                            <!-- in Drupal footer-menu -->
-                            <nav class="navigation__nav--desktop">
-                                <div class="navigation__items--desktop">
-                                    <ul class="navigation__list">
-                                        <li class="navigation__item--desktop">
-                                            <a href="index.html" class="navigation__link--desktop">Home</a>
-                                        </li>
-                                        <li class="navigation__item--desktop">
-                                            <a href="#" class="navigation__link--desktop">Teven</a>
-                                        </li>
-                                        <li class="navigation__item--desktop">
-                                            <a href="#" class="navigation__link--desktop">Reuen</a>
-                                        </li>
-                                        <li class="navigation__item--desktop">
-                                            <a href="#" class="navigation__link--desktop">Pups</a>
-                                        </li>
-                                        <li class="navigation__item--desktop">
-                                            <a href="#" class="navigation__link--desktop">Foto's</a>
-                                        </li>
-                                        <li class="navigation__item--desktop">
-                                            <a href="#" class="navigation__link--desktop">Nieuws</a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </nav>
-
-                        </div>
-                        <!-- end navigation -->
-                    </div>
-
-                </div>
-
-            </div>
-
-        </header>
-
-        <div class="container">
-
-            <section class="pups-expected panel-wide">
-
-                <div class="panel-wide__img">
-                    <img src="../images/for_html/pups.jpg" alt="Pups">
-                </div>
-
-                <div class="panel-wide__wrapper">
-
-                    <div class="pups-expected__title">
-                        <div class="heading">
-                            Pups verwacht
-                        </div>
-                    </div>
-
-                    <div class="pups-expected__teaser-content">
-                        De Bullensteeg Pepper en Bandit From Fortunebulls
-                    </div>
-
-                    <div class="read-more u-flex-align-right">
-                        <a href="page_pups.html" class="read-more__link">Lees meer</a>
-                    </div>
-
-                </div>
-
-                <div class="panel-wide__bcg"></div>
-
-            </section>
-
+        <div class="site__name heading">
+          De Bullensteeg
         </div>
 
-        <section class="our-pups">
+        <div class="header__menu">
+          <div class="navigation">
+            <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
 
-            <div class="our-pups__img-wrap">
-                <div class="our-pups__img-wrap--mobile">
-                  <!-- on Drupal view-slider -->
-                    <img src="../images/for_html/pup03.jpg" alt="our pups">
-                </div>
+            <label for="navi-toggle" class="navigation__button">
+              <span class="navigation__icon">&nbsp;</span>
+            </label>
 
-                <div class="our-pups__img-wrap--desktop">
-                    <img src="../images/for_html/pup03.jpg" alt="our pups">
-                    <img src="../images/for_html/pups.jpg" alt="our pups">
-                    <img src="../images/for_html/pup03.jpg" alt="our pups">
-                </div>
+            <div class="navigation__background"></div>
 
-            </div>
+            <!-- In Drupal main-menu -->
+            <nav class="navigation__nav">
+              <div class="navigation__items">
+                <ul class="navigation__list">
+                  <li class="navigation__item">
+                    <a href="index.html" class="navigation__link">Home</a>
+                  </li>
+                  <li class="navigation__item">
+                    <a href="#" class="navigation__link">Teven</a>
+                  </li>
+                  <li class="navigation__item">
+                    <a href="#" class="navigation__link">Reuen</a>
+                  </li>
+                  <li class="navigation__item">
+                    <a href="#" class="navigation__link">Pups</a>
+                  </li>
+                  <li class="navigation__item">
+                    <a href="#" class="navigation__link">Foto's</a>
+                  </li>
+                  <li class="navigation__item">
+                    <a href="#" class="navigation__link">Nieuws</a>
+                  </li>
+                </ul>
+              </div>
+              <div class="navigation__site-name">
+                Bullensteeg
+              </div>
+            </nav>
 
-            <div class="our-pups__text">
-                <h2 class="heading heading-second heading-second--taller">
-                    Onze pups
-                </h2>
-                <p>
-                    Onze pups groeien altijd op in huiselijke kring met andere honden,
-                </p>
-                <p>
-                    Er komen ook steeds veel mensen en kinderen op puppy visite, dit is al een belangrijke en goede socialisatie voor de pup.
-                </p>
+            <!-- in Drupal footer-menu -->
+            <nav class="navigation__nav--desktop">
+              <div class="navigation__items--desktop">
+                <ul class="navigation__list">
+                  <li class="navigation__item--desktop">
+                    <a href="index.html" class="navigation__link--desktop">Home</a>
+                  </li>
+                  <li class="navigation__item--desktop">
+                    <a href="#" class="navigation__link--desktop">Teven</a>
+                  </li>
+                  <li class="navigation__item--desktop">
+                    <a href="#" class="navigation__link--desktop">Reuen</a>
+                  </li>
+                  <li class="navigation__item--desktop">
+                    <a href="#" class="navigation__link--desktop">Pups</a>
+                  </li>
+                  <li class="navigation__item--desktop">
+                    <a href="#" class="navigation__link--desktop">Foto's</a>
+                  </li>
+                  <li class="navigation__item--desktop">
+                    <a href="#" class="navigation__link--desktop">Nieuws</a>
+                  </li>
+                </ul>
+              </div>
+            </nav>
 
-                <p>
+          </div>
+          <!-- end navigation -->
+        </div>
 
-                    Uiteraard fokken wij volgens de normen van de Koninklijke Belgische Franse Bulldogen Club.
-                </p>
+      </div>
 
-            </div>
+    </div>
 
-            <div class="our-pups__bcg"></div>
+  </header>
 
-        </section>
+  <div class="container">
 
-        <footer class="footer-wrapper">
-            <div class="container">
+    <section class="pups-expected panel-wide">
 
-                <div class="sub-footer">
+      <div class="panel-wide__img">
+        <img src="../images/for_html/pups.jpg" alt="Pups">
+      </div>
 
-                    <div class="sub-footer__btn-contact">
-                        <a href="#" class="btn btn--green u-align-center u-full-width">Contacteer mij</a>
-                    </div>
+      <div class="panel-wide__wrapper">
 
-                    <div class="sub-footer__contact-details">
-                        Marleen Halleng
-                        <br>
-                        marleenhalleng@gmail.com
-                        <br>
-                        Tel: (+32) 497 239 743
-                    </div>
+        <div class="pups-expected__title">
+          <div class="heading">
+            Pups verwacht
+          </div>
+        </div>
 
-                </div>
-                <!-- end sub-footer -->
+        <div class="pups-expected__teaser-content">
+          De Bullensteeg Pepper en Bandit From Fortunebulls
+        </div>
 
-                <div class="footer">
-                    Copyright © 2018 | BULLENSTEEG - Privacy Policy
-                </div>
+        <div class="read-more u-flex-align-right">
+          <a href="page_pups.html" class="read-more__link">Lees meer</a>
+        </div>
 
-            </div>
+      </div>
 
-        </footer>
+      <div class="panel-wide__bcg"></div>
 
-    </body>
+    </section>
+
+  </div>
+
+  <section class="our-pups">
+
+    <div class="our-pups__img-wrap">
+      <div class="our-pups__img-wrap--mobile">
+        <!-- on Drupal view-slider -->
+        <img src="../images/for_html/pup03.jpg" alt="our pups">
+      </div>
+
+      <div class="our-pups__img-wrap--desktop">
+        <img src="../images/for_html/pup03.jpg" alt="our pups">
+        <img src="../images/for_html/pups.jpg" alt="our pups">
+        <img src="../images/for_html/pup03.jpg" alt="our pups">
+      </div>
+
+    </div>
+
+    <div class="our-pups__text">
+      <div class="our-pups__text-content">
+
+        <h2 class="heading heading-second heading-second--taller">
+          Onze pups
+        </h2>
+        <p>
+          Onze pups groeien altijd op in huiselijke kring met andere honden,
+        </p>
+        <p>
+          Er komen ook steeds veel mensen en kinderen op puppy visite, dit is al een belangrijke en goede socialisatie voor de pup.
+        </p>
+
+        <p>
+
+          Uiteraard fokken wij volgens de normen van de Koninklijke Belgische Franse Bulldogen Club.
+        </p>
+
+      </div>
+      <!-- end our-pups__text-content -->
+
+    </div>
+
+    <div class="our-pups__bcg"></div>
+
+  </section>
+
+  <footer class="footer-wrapper">
+    <div class="container">
+
+      <div class="sub-footer">
+
+        <div class="sub-footer__btn-contact">
+          <a href="#" class="btn btn--green u-align-center u-full-width">Contacteer mij</a>
+        </div>
+
+        <div class="sub-footer__contact-details">
+          Marleen Halleng
+          <br> marleenhalleng@gmail.com
+          <br> Tel: (+32) 497 239 743
+        </div>
+
+      </div>
+      <!-- end sub-footer -->
+
+      <div class="footer">
+        Copyright © 2018 | BULLENSTEEG - Privacy Policy
+      </div>
+
+    </div>
+
+  </footer>
+
+</body>
 
 </html>
