--- a/sass/05-content/_our-pups.scss
+++ b/sass/05-content/_our-pups.scss
@@ -5,29 +5,85 @@
 .our-pups {
   width: 80vw;
   margin: 2rem auto 8rem;
-  background: $white;
-  box-shadow: $panel-shadow;
 
   display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: auto auto;
+  grid-template-columns: 10% 80% 10%;
+  grid-template-rows: repeat(2, auto);
+
+  @include respond(desktop) {
+    width: 100vw;
+    grid-template-columns: minmax(10vw, 19vw) minmax(10vw, 15vw) minmax(25vw, 50vw) minmax(1vw, auto);
+    grid-template-rows: minmax(5vw, 7vw) minmax(5vw, 7vw) auto;
+  }
 
   &__img-wrap {
+    grid-column: 1 / -1;
     grid-row: 1 / 2;
+
+    @include respond(desktop) {
+      grid-column: 1 / 3;
+      grid-row: 1 / 3;
+      order: 2;
+    }
+
+    img {
+      display: block;
+    }
+
+    &--mobile {
+      display: block;
+
+      @include respond(desktop) {
+        display: none;
+      }
+    }
 
     &--desktop {
       display: none;
+
+      @include respond(desktop) {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: .8rem;
+      }
     }
+
   }
 
   &__text {
-    padding: 2rem;
-    grid-row: 2 / -1;
+    padding: 5rem 0;
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+
+    &-content {
+      width: 100%;
+
+      @include respond(desktop) {
+        width: 50vw;
+      }
+    }
+
+    @include respond(desktop) {
+      grid-column: 2 / -1;
+      grid-row: 3 / -1;
+
+      padding: 0 5rem 5rem;
+    }
   }
 
   &__bcg {
-    display: none;
+    display: block;
+    background: $white;
+    box-shadow: $panel-shadow;
+    z-index: -1;
 
+    grid-column: 1 / -1;
+    grid-row: 2 / -1;
+
+    @include respond(desktop) {
+      grid-column: 2 / -1;
+      grid-row: 2 / -1;
+    }
   }
 
 }
