--- a/templates/page_pups.html
+++ b/templates/page_pups.html
@@ -138,6 +138,7 @@
       </div>
 
       <div class="our-pups__img-wrap--desktop">
+        <!-- random 3 images with view block -->
         <img src="../images/for_html/pup03.jpg" alt="our pups">
         <img src="../images/for_html/pups.jpg" alt="our pups">
         <img src="../images/for_html/pup03.jpg" alt="our pups">
@@ -146,22 +147,27 @@
     </div>
 
     <div class="our-pups__text">
-      <div class="our-pups__text-content">
+      <div class="our-pups__text-content-wrap">
 
-        <h2 class="heading heading-second heading-second--taller">
-          Onze pups
-        </h2>
-        <p>
-          Onze pups groeien altijd op in huiselijke kring met andere honden,
-        </p>
-        <p>
-          Er komen ook steeds veel mensen en kinderen op puppy visite, dit is al een belangrijke en goede socialisatie voor de pup.
-        </p>
+        <div class="our-pups__text-content-title">
+          <h2 class="heading heading-second heading-second--taller">
+            Onze pups
+          </h2>
+        </div>
 
-        <p>
+        <div class="our-pups__text-content-body">
+          <p>
+            Onze pups groeien altijd op in huiselijke kring met andere honden,
+          </p>
+          <p>
+            Er komen ook steeds veel mensen en kinderen op puppy visite, dit is al een belangrijke en goede socialisatie voor de pup.
+          </p>
 
-          Uiteraard fokken wij volgens de normen van de Koninklijke Belgische Franse Bulldogen Club.
-        </p>
+          <p>
+            Uiteraard fokken wij volgens de normen van de Koninklijke Belgische Franse Bulldogen Club.
+          </p>
+        </div>
+
 
       </div>
       <!-- end our-pups__text-content -->
